JBTM-1112 increase MAVEN MaxPermSize